# velog-word-cloud

./: .pre-commit-config.yaml  README.md  commit-msg.py  pyproject.toml  requirements.txt  run-server.py  setup.cfg
app/: constant.py  main.py  scraper.py  wordcloud.py
app/api/: word_cloud.py  wordcloud.py
bloud/: constant.py  main.py  schemas.py  scraper.py
bloud/api/: scraper.py  word_cloud.py
script/: git-hooks.sh
